Added more commands, created class Forth

--- a/job2-Forth/CMakeLists.txt
+++ b/job2-Forth/CMakeLists.txt
@@ -3,5 +3,18 @@ project(job2_Forth)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(job2_Forth main.cpp ForthFactory.h ArithmeticOperators.h InBuildOperators.h
-        LogicOperators.h ConditionalOperators.h PrintString.h Loop.h Command.h)
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+
+add_executable(job2_Forth main.cpp
+        Factory.h
+        Singleton.h
+        ArithmeticOperators.h
+        InBuildOperators.h
+        LogicOperators.h
+        ConditionalOperators.h
+        OutputOperators.h
+        Loop.h
+        Command.h
+        ArithmeticOperators.cpp
+        CommandFactory.h CommandFactoryRegistrations.h Functions.h Functions.cpp InBuildOperators.cpp ClearStackFunction.h OutputOperators.cpp MyExceptions.h Forth.cpp Forth.h)
