Added realisation of some operators. Will not be updated cause basic logic is broken

--- a/job2-Forth/CMakeLists.txt
+++ b/job2-Forth/CMakeLists.txt
@@ -6,15 +6,28 @@ set(CMAKE_CXX_STANDARD 20)
 add_compile_options(-fsanitize=address)
 add_link_options(-fsanitize=address)
 
-add_executable(job2_Forth main.cpp
+add_compile_options(-Wall)
+add_link_options(-Wall)
+
+add_executable(job2_Forth
+        main.cpp
         Factory.h
         Singleton.h
         ArithmeticOperators.h
         InBuildOperators.h
         LogicOperators.h
-        ConditionalOperators.h
+        ConditionalOperator.h
         OutputOperators.h
         Loop.h
         Command.h
         ArithmeticOperators.cpp
-        CommandFactory.h CommandFactoryRegistrations.h Functions.h Functions.cpp InBuildOperators.cpp ClearStackFunction.h OutputOperators.cpp MyExceptions.h Forth.cpp Forth.h)
+        CommandFactory.h
+        CommandFactoryRegistrations.h
+        Functions.h
+        Functions.cpp
+        InBuildOperators.cpp
+        FunctionClearStack.h
+        OutputOperators.cpp
+        Forth.cpp
+        Forth.h
+        LogicOperators.cpp ConditionalOperator.cpp CommandManager.h Loop.cpp CommandManager.cpp FunctionGetCommandType.h)
